--- a/app.yaml
+++ b/app.yaml
@@ -5,4 +5,8 @@ threadsafe: true
 
 handlers:
 - url: /.*
-  script: helloworld.app
+  script: guestbook.app
+
+libraries:
+- name: webapp2
+  version: latest
