--- a/app.yaml
+++ b/app.yaml
@@ -4,9 +4,14 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /stylesheets
+  static_dir: stylesheets
+
 - url: /.*
   script: guestbook.app
 
 libraries:
 - name: webapp2
+  version: latest
+- name: jinja2
   version: latest
